# Math-Optimization

./: README.md  pyproject.toml  test.ipynb
